updated swagger documention, fixed some bugs
